--- a/简历2.html
+++ b/简历2.html
@@ -12,7 +12,7 @@ table{
     <caption><h2>个人简历</h2></caption>
     <td colspan="7" align="center"><b>基本信息</b></td>
       <tr>
-                    <td><img src="file:///C:/Users/sunruidi/Desktop/%E5%AD%99%E7%91%9E%E7%AC%9B/%E5%9B%BE%E7%89%87/%E5%A4%B4%20%E5%83%8F/%E5%A4%B4%E5%83%8F.jpg"  width="180px" height="180px" align="left"></td>   
+                    <td><img src=".头像.jpg"  width="180px" height="180px" align="left"></td>   
                     <td colspan="6">
                              <ul>
                                        <li>姓名：孙瑞笛</li>   
