--- a/简介.html
+++ b/简介.html
@@ -15,7 +15,7 @@ h1{
 <body background="http://img.mp.itc.cn/upload/20170624/ae5237401ea74d46844c4b4a89eadea3_th.jpg">
        <h1>个人简历</h1>
             <h2>一、基本信息</h2>
-                  <img src=".头像.jpg"  width="200px" height="200px" align="left">
+                  <img src="./头像.jpg"  width="200px" height="200px" align="left">
 <table border="2" cellpadding="10">         
   <tr>
         <td>姓名</td>
